# UltimateProphet

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Patches/: P5_Factory_Programs_FACTORY_v1.03.syx  P5_Factory_Programs_USER_v1.03.syx
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SysExLoader.cpp  SysExLoader.h
Source/DSP/: CEM3310Envelope.cpp  CEM3310Envelope.h  CEM3320Filter.cpp  CEM3320Filter.h  CEM3340Oscillator.cpp  CEM3340Oscillator.h  FastMath.h  LFO.cpp  LFO.h  Oversampling.cpp  Oversampling.h  PolyModMatrix.cpp  PolyModMatrix.h  Prophet5Voice.cpp  Prophet5Voice.h  SSM2040Filter.cpp  SSM2040Filter.h
Source/UI/: DebugConsole.cpp  DebugConsole.h  ProphetLookAndFeel.h
